not finished fix whitespace on top

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -26,6 +26,18 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 ion-nav-back-button {
 	margin-right:15px !important;
 }
+.bar {
+	border:none;
+}
+.bar-header {
+	border:none;
+}
+.has-subheader {
+	top: 44px !important;
+}
+.bar-subheader {
+	top: 0px !important;
+}
 .bar.bar-dark {
 	border:none !important;
 }
@@ -75,7 +87,7 @@ label.item-input-wrapper>input.ng-pristine.ng-valid {
 	bottom: auto !important;
 }
 ion-modal-view>div {
-	padding-top: 45px;
+	// padding-top: 45px;
 }
 ion-modal-view>div>.item-input>input {
 	border-bottom: 1px solid #f7f7f7 !important;
